--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
   "name": "ocaml",
-  "version": "4.11.0",
+  "version": "4.11.1000",
   "description": "OCaml Compiler as an esy npm Package",
   "versionNotes": [
     "See the README for notes about how the version of this package corresponds to the official OCaml compiler version."
   ],
   "esy": {
     "build": [
-      "./esy-configure --disable-cfi --prefix $cur__install",
+      "./esy-configure -flambda --disable-cfi --prefix $cur__install",
       "./esy-build"
     ],
     "buildsInSource": true,
